--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aliencreations/node-authenticator",
-  "version": "1.0.2",
+  "version": "1.1.0",
   "description": "Authenticator for Alien Creations node apps.",
   "main": "index.js",
   "dependencies": {
@@ -12,7 +12,7 @@
     "dotenv-safe": "^4.0.3",
     "flat-cache": "^2.0.1",
     "jsonwebtoken": "8.x.x",
-    "ramda": "^0.27.0"
+    "ramda": "^0.29.0"
   },
   "devDependencies": {
     "@aliencreations/eslint-config": "^1.x.x",
@@ -42,5 +42,9 @@
   "bugs": {
     "url": "https://github.com/aliencreations/node-authenticator/issues"
   },
-  "homepage": "https://github.com/aliencreations/node-authenticator"
+  "homepage": "https://github.com/aliencreations/node-authenticator",
+  "engines": {
+    "node": "^14.21.3",
+    "npm": "^6.14.6"
+  }
 }
